force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Estatus__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatus__c</fullName>
    <description>Estatus del pago del NPV</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acreditado</fullName>
                <default>true</default>
                <label>Acreditado</label>
            </value>
            <value>
                <fullName>No Acreditado</fullName>
            </value>
            <value>
                <fullName>Reembolso</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Devuelto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>