force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Fechadeentregaestimada__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadeentregaestimada__c</fullName>
    <description>Campo para registrar la fecha estimada de entrega de la moto.</description>
    <label>Fecha de entrega estimada</label>
    <type>Date</type>
</CustomField>