force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_FolioTransaccion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FolioTransaccion__c</fullName>
    <label>Folio de transacción</label>
    <length>6</length>
    <type>Text</type>
</CustomField>