force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_IDUniversal1__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IDUniversal1__c</fullName>
    <description>Campo para recibir el Id de la venta el cual estará compuesto</description>
    <label>ID Universal</label>
    <length>35</length>
    <type>Text</type>
</CustomField>