force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_IDUniversal__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IDUniversal__c</fullName>
    <formula>DSALES_Factura__c  &amp;  DSALES_Clave_Tienda__c  &amp;  TEXT (DAY(DSALES_Fecha__c)) &amp; TEXT (MONTH(DSALES_Fecha__c)) &amp; TEXT (YEAR(DSALES_Fecha__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Universal</label>
    <type>Text</type>
</CustomField>