force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_ProductoAdquirido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ProductoAdquirido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relación entre el objeto Producto Adquirido y el Pago.</description>
    <label>Producto Adquirido</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.DSALES_TipoProducto__c</field>
            <operation>equals</operation>
            <value>Producto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Información de Pagos</relationshipLabel>
    <relationshipName>Informaci_n_de_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>