force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Seguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Seguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguro</label>
    <type>Checkbox</type>
</CustomField>