force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_TipoFolio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoFolio__c</fullName>
    <label>Tipo de folio</label>
    <length>2</length>
    <type>Text</type>
</CustomField>