force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vendedor__c</fullName>
    <description>Número de vendedor</description>
    <label>ID Vendedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>