force-app/main/default/objects/DSALES_InformacionDePago__c/fields/dsalesContratante__c.field-meta.xml
<CustomField>
    <fullName>dsalesContratante__c</fullName>
    <label>Contratante</label>
    <length>10</length>
    <type>Text</type>
</CustomField>