force-app/main/default/objects/DSALES_InformacionDePago__c/fields/dsalesMedioCobro__c.field-meta.xml
<CustomField>
    <fullName>dsalesMedioCobro__c</fullName>
    <label>Medio de Cobro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>