force-app/main/default/objects/DSALES_InformacionDePago__c/fields/dsalesNoCelularCliente__c.field-meta.xml
<CustomField>
    <fullName>dsalesNoCelularCliente__c</fullName>
    <description>Campo espejo del numero de celular de certificado a info de pago</description>
    <formula>DSALES_Certificado__r.DSALES_Numero_celular__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Celular del Cliente</label>
    <type>Text</type>
</CustomField>