force-app/main/default/objects/DSALES_InformacionDePago__c/fields/dsalesRegionGEX__c.field-meta.xml
<CustomField>
    <fullName>dsalesRegionGEX__c</fullName>
    <description>Campo de región para instalaciones</description>
    <formula>DSALES_Oportunidad__r.SyncedQuote.DSALES_Regioon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Región GEX</label>
    <type>Text</type>
</CustomField>