force-app/main/default/objects/DSALES_InformacionDePago__c/recordTypes/DSALES_Pagos_en_NPV.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Pagos_en_NPV</fullName>
    <active>true</active>
    <description>Aquí se registrarán los pagos de la venta</description>
    <label>Pagos de venta de servicios</label>
</RecordType>