force-app/main/default/objects/DSALES_InformacionDePago__c/recordTypes/Pagos_de_Venta_de_SC.recordType-meta.xml
<RecordType>
    <fullName>Pagos_de_Venta_de_SC</fullName>
    <active>true</active>
    <description>Tipo de registro para información de pagos de Seguros de celulares</description>
    <label>Pagos de Venta de SC</label>
</RecordType>