force-app/main/default/objects/DSALES_InformacionDePago__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>DSALES_Poliza__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DSALES_Motoexterna__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todas las Informaciones de Pago</label>
</ListView>