force-app/main/default/objects/DSALES_InformacionDePago__c/listViews/AllPISYS.listView-meta.xml
<ListView>
    <fullName>AllPISYS</fullName>
    <columns>NAME</columns>
    <columns>DSALES_IDUniversal__c</columns>
    <columns>DSALES_IDUniversal1__c</columns>
    <columns>DSALES_SKU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>