force-app/main/default/objects/DSALES_InformacionDePago__c/listViews/Mis_Informaci_n_de_Pago.listView-meta.xml
<ListView>
    <fullName>Mis_Informaci_n_de_Pago</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Fecha__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_Poliza__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DSALES_InformacionDePago__c.DSALES_PagosdeVentaenNPVSM_c</value>
    </filters>
    <label>Mi Información de Pago</label>
</ListView>