force-app/main/default/objects/DSALES_InformacionDePago__c/listViews/Nuevos_de_esta_semana.listView-meta.xml
<ListView>
    <fullName>Nuevos_de_esta_semana</fullName>
    <columns>DSALES_IDUniversal1__c</columns>
    <columns>NAME</columns>
    <columns>DSALES_ProductoAdquirido__c</columns>
    <columns>DSALES_Fecha__c</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>DSALES_Factura__c</columns>
    <columns>DSALES_FolioTransaccion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>DSALES_Seguro__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Nuevos de esta semana</label>
</ListView>